--- a/index.html
+++ b/index.html
@@ -105,23 +105,33 @@
                         },
                         {
                               type: "Proyecto",
-                              name: "Web Scraping 🧑🏽‍💻",
+                              name: "Web Scraping 🧑🏽‍💻 ",
                               start: 8,
                               end: 9,
                         },
                         {
                               type: "Proyecto",
-                              name: "Regresión lineal 👩🏽‍💻👨🏽‍💻 ",
+                              name: "Datathon 🧑🏽‍💻 ",
                               start: 10,
-                              end: 13,
+                              end: 10,
+                        },
+                        {
+                              type: "Proyecto",
+                              name: "Regresión lineal 👩🏽‍💻👨🏽‍💻 ",
+                              start: 11,
+                              end: 14,
                         },
                         {
                               type: "Proyecto",
                               name: "Regresión logística binaria 🧑🏽‍💻",
+                              start: 15,
+                              end: 16,
                         },
                         {
                               type: "Proyecto",
                               name: "Regresión logística multiclase 👩🏽‍💻👨🏽‍💻 ",
+                              start: 17,
+                              end: 18,
                         },
                         {
                               type: "Tema",
@@ -149,21 +159,27 @@
                         },
                         {
                               type: "Tema",
-                              name: "Intro a mates y estadística (Derivadas, límites, métricas, distribuciones)",
+                              name: "Intro a Análisis exploratorio de Datos (EDA), pandas, numpy, scikitlearn, matplotlib",
                               start: 10,
                               end: 10,
                         },
                         {
                               type: "Tema",
-                              name: "Intro a machine learning (Tipos de modelos) y regresión lineal (Modelos, entrenamiento, evaluación, regresión lineal)",
+                              name: "Intro a mates y estadística (Derivadas, límites, métricas, distribuciones)",
                               start: 11,
                               end: 11,
                         },
                         {
                               type: "Tema",
+                              name: "Intro a machine learning (Tipos de modelos) y regresión lineal (Modelos, entrenamiento, evaluación, regresión lineal)",
+                              start: 12,
+                              end: 12,
+                        },
+                        {
+                              type: "Tema",
                               name: "Intro a modelo de clasificación binaria (Regresión logicastica, modelos, entrenamiento, evaluación)",
-                              start: 14,
-                              end: 14,
+                              start: 15,
+                              end: 15,
                         },
                         {
                               type: "Tema",
