--- a/index.html
+++ b/index.html
@@ -1,283 +1,120 @@
 <!DOCTYPE html>
-<html lang="es">
-      <head>
-            <meta charset="UTF-8" />
-            <meta
-                  name="viewport"
-                  content="width=device-width, initial-scale=1.0"
-            />
-            <title>Bootcamp de IA</title>
-            <style>
-                  body {
-                        font-family: Arial, sans-serif;
-                        margin: 20px;
-                  }
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Sidebar -->
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse">
+                <div class="position-sticky pt-3">
+                    <h1 class="h3 mb-4 px-3">Student Dashboard</h1>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-link="zoom">
+                                <i class="bi bi-camera-video me-2"></i>
+                                Zoom
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-link="classroom">
+                                <i class="bi bi-grid-3x3-gap me-2"></i>
+                                Google Classroom
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./roadmap/roadmap.html">
+                              <!-- <a class="nav-link" href="./data/data.json"> -->
+                                <i class="bi bi-map me-2"></i>
+                                Roadmap
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-link="discord">
+                                <i class="bi bi-chat-dots me-2"></i>
+                                Discord
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-link="github">
+                                <i class="bi bi-github me-2"></i>
+                                GitHub Repository
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
-                  table {
-                        border-collapse: collapse;
-                        width: 100%;
-                        table-layout: fixed;
-                  }
+            <!-- Main Content -->
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div class="container section-container mt-4">
+                    <div class="row g-4">
+                        <!-- Calendar Card -->
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Course Calendar</h5>
+                                    <div class="ratio ratio-16x9">
+                                        <iframe src="https://calendar.google.com/calendar/embed?src=c_classroom12345abcdef%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-                  th,
-                  td {
-                        border: 1px solid #dddddd;
-                        text-align: center;
-                        padding: 8px;
-                        font-size: 11px;
-                        /* Tamaño de texto del cuerpo */
-                  }
+                        <!-- Quick Links Card -->
+                        <div class="col-md-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Quick Links</h5>
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-outline-primary" data-link="zoom">
+                                            <i class="bi bi-camera-video me-2"></i>
+                                            Join Zoom Meeting
+                                        </button>
+                                        <button class="btn btn-outline-primary" data-link="classroom">
+                                            <i class="bi bi-grid-3x3-gap me-2"></i>
+                                            Open Google Classroom
+                                        </button>
+                                        <button class="btn btn-outline-primary" data-link="roadmap">
+                                            <i class="bi bi-map me-2"></i>
+                                            View Course Roadmap
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-                  th {
-                        background-color: #f4f4f4;
-                        font-size: 10px;
-                        /* Tamaño de texto de los encabezados */
-                  }
+                        <!-- Community Card -->
+                        <div class="col-md-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Community</h5>
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-outline-primary" data-link="discord">
+                                            <i class="bi bi-chat-dots me-2"></i>
+                                            Join Discord Server
+                                        </button>
+                                        <button class="btn btn-outline-primary" data-link="github">
+                                            <i class="bi bi-github me-2"></i>
+                                            Access GitHub Repository
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
 
-                  td.block {
-                        color: white;
-                        font-weight: bold;
-                  }
-
-                  td.block.pildora {
-                        background-color: #d9af05;
-                        /* Amarillo */
-                  }
-
-                  td.block.tema {
-                        background-color: #2ecc71;
-                        /* Verde */
-                  }
-
-                  td.block.proyecto {
-                        background-color: #e67e22;
-                        /* Naranja */
-                  }
-
-                  td.empty {
-                        background-color: #f9f9f9;
-                  }
-                  .label {
-                        font-weight: bold;
-                        color: white;
-                        text-align: left;
-                  }
-
-                  .label.pildora {
-                        background-color: #d9af05;
-                  }
-
-                  .label.tema {
-                        background-color: #2ecc71;
-                  }
-
-                  .label.proyecto {
-                        background-color: #e67e22;
-                  }
-
-                  .icon {
-                        margin-right: 5px;
-                  }
-                  #generate {
-                        display: none;
-                  }
-            </style>
-      </head>
-      <body>
-            <h1>Bootcamp de IA</h1>
-            <div id="generate">
-                  <label for="weeks">Semanas:</label
-                  ><input
-                        type="number"
-                        id="weeks"
-                        value="36"
-                        min="1"
-                        max="52"
-                  /><button onclick="generateGantt()">Generar</button>
-            </div>
-            <table id="gantt-table"></table>
-            <script>
-                  const data = [
-                        {
-                              type: "Proyecto",
-                              name: "App con Python 🧑🏽‍💻 ",
-                        },
-                        {
-                              type: "Proyecto",
-                              name: "Un CRUD 👩🏽‍💻👨🏽‍💻 ",
-                              start: 4,
-                              end: 7,
-                        },
-                        {
-                              type: "Proyecto",
-                              name: "Web Scraping 🧑🏽‍💻 ",
-                              start: 8,
-                              end: 9,
-                        },
-                        {
-                              type: "Proyecto",
-                              name: "Datathon 🧑🏽‍💻 ",
-                              start: 10,
-                              end: 10,
-                        },
-                        {
-                              type: "Proyecto",
-                              name: "Regresión lineal 👩🏽‍💻👨🏽‍💻 ",
-                              start: 11,
-                              end: 14,
-                        },
-                        {
-                              type: "Proyecto",
-                              name: "Regresión logística binaria 🧑🏽‍💻",
-                              start: 15,
-                              end: 16,
-                        },
-                        {
-                              type: "Proyecto",
-                              name: "Regresión logística multiclase 👩🏽‍💻👨🏽‍💻 ",
-                              start: 17,
-                              end: 18,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Introducción a programación (Terminal, Entornos de desarrollo, Python, Gestor de paquetes, Entorno virtual, SCRUM)",
-                              start: 1,
-                              end: 1,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Buenas prácticas (Programación funcional, OOP, Git, Docker, Testing)",
-                              start: 4,
-                              end: 4,
-                        },
-                        {
-                              type: "Tema",
-                              name: "BBDD (SQL, NoSQL, ORM/ODM ) y Despliegue en producción (APIs Rest, Render, Azure)",
-                              start: 5,
-                              end: 5,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Web Scraping (HTML, CSS, JS, Selenium, Scrapy, DOM)",
-                              start: 8,
-                              end: 8,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Intro a Análisis exploratorio de Datos (EDA), pandas, numpy, scikitlearn, matplotlib",
-                              start: 10,
-                              end: 10,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Intro a mates y estadística (Derivadas, límites, métricas, distribuciones)",
-                              start: 11,
-                              end: 11,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Intro a machine learning (Tipos de modelos) y regresión lineal (Modelos, entrenamiento, evaluación, regresión lineal)",
-                              start: 12,
-                              end: 12,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Intro a modelo de clasificación binaria (Regresión logicastica, modelos, entrenamiento, evaluación)",
-                              start: 15,
-                              end: 15,
-                        },
-                        {
-                              type: "Tema",
-                              name: "Intro a modelo de clasificación multiclase y ajuste de modelo",
-                              start: 17,
-                              end: 17,
-                        },
-                  ];
-                  function generateGantt() {
-                        const weeks = document.getElementById("weeks").value;
-                        const table = document.getElementById("gantt-table");
-                        table.innerHTML = ""; // Limpiar tabla antes de regenerar
-
-                        // Crear encabezado de los meses
-                        let monthHeaderRow =
-                              "<tr><th style='width:150px'></th>"; // Primera celda vacía para la columna de elementos
-
-                        for (let i = 1; i <= weeks; i += 4) {
-                              const month = Math.ceil(i / 4); // Calcular el mes correspondiente
-                              monthHeaderRow += `<th colspan="4">Mes ${month}</th>`;
-                        }
-
-                        monthHeaderRow += "</tr>";
-                        table.innerHTML = monthHeaderRow;
-
-                        // Crear encabezado de las semanas
-                        let weekHeaderRow = "<tr><th>Elemento</th>";
-
-                        for (let i = 1; i <= weeks; i++) {
-                              weekHeaderRow += `<th>${i}</th>`;
-                        }
-
-                        weekHeaderRow += "</tr>";
-                        table.innerHTML += weekHeaderRow;
-
-                        let lastEnd = 0; // Variable para rastrear el último "end" de los elementos anteriores
-
-                        // Crear filas
-                        data.forEach((item) => {
-                              let icon = "";
-                              let colorClass = "";
-
-                              // Asignar iconos y colores según el tipo
-                              if (item.type === "Proyecto") {
-                                    icon = "";
-                                    colorClass = "proyecto";
-                                    // Proyectos tienen 3 bloques por defecto
-                                    item.start = item.start
-                                          ? item.start
-                                          : lastEnd + 1;
-                                    item.end = item.end
-                                          ? item.end
-                                          : item.start + 2;
-                              } else if (item.type === "Píldora") {
-                                    icon = "";
-                                    colorClass = "pildora";
-                                    // Píldoras tienen 1 bloque por defecto
-                                    item.start = item.start
-                                          ? item.start
-                                          : lastEnd + 1;
-                                    item.end = item.end ? item.end : item.start;
-                              } else if (item.type === "Tema") {
-                                    icon = "";
-                                    colorClass = "tema";
-                                    // Temas tienen 3 bloques por defecto
-                                    item.start = item.start
-                                          ? item.start
-                                          : lastEnd + 1;
-                                    item.end = item.end
-                                          ? item.end
-                                          : item.start + 2;
-                              }
-
-                              // Actualizar el último "end" para el siguiente elemento
-                              lastEnd = item.end;
-
-                              // La primera celda de la fila (columna de elementos) tiene el mismo color que el resto de la fila
-                              let row = `<tr><td class="label ${colorClass}">${icon} ${item.name}</td>`;
-                              for (let i = 1; i <= weeks; i++) {
-                                    if (i >= item.start && i <= item.end) {
-                                          row += `<td class="block ${colorClass}" ></td>`;
-                                    } else {
-                                          row += `<td class="empty"></td>`;
-                                    }
-                              }
-
-                              row += "</tr>";
-                              table.innerHTML += row;
-                        });
-                  }
-
-                  // Generar la tabla al cargar la página
-                  window.onload = generateGantt;
-            </script>
-      </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
