--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                                         <ul>
                                             <li>Que tenga un poco de inglés (hablado no solo en la presentación)</li>
                                             <li>Que tenga parte teórica y parte práctica. Énfasis en la práctica</li>
-                                            <li>Tiempo mínimo 1 hora, como un taller, que tenga un repositorio de
-                                                referencia</li>
+                                            <li>Tiempo mínimo 1 hora</li>
+                                            <li>Se recomienda crear un repositorio en Github y publicar un artículo en Medium</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -116,7 +116,7 @@
                                     </h5>
                                     <div class="ratio ratio-16x9">
                                         <iframe
-                                            src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FMadrid&bgcolor=%23EF6C00&src=Y18zMDQ4MjU4NDYxYWE5MTk2YzE3YjgyNDc4OTk5NDk2MzNjNzMzZDk4MzhlZjFhZTQ1YzMzZTQ5ZDRkZGU5ZGZmQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%234285F4"
+                                            src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Europe%2FMadrid&src=Y18zMDQ4MjU4NDYxYWE5MTk2YzE3YjgyNDc4OTk5NDk2MzNjNzMzZDk4MzhlZjFhZTQ1YzMzZTQ5ZDRkZGU5ZGZmQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%234285F4"
                                             style="border:solid 1px #777" width="800" height="600" frameborder="0"
                                             scrolling="no">
                                         </iframe>
