--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
                                             </li>
                                             <li class="list-inline-item">
-                                                <span class="badge integracion">
-                                                    <i class="bi bi-diagram-3-fill"></i> Integración
+                                                <span class="badge transicion">
+                                                    <i class="bi bi-diagram-3-fill"></i> Transición flexible
                                                     (Evaluación, eventos, vacaciones, etc.)
                                                 </span>
 
